--- a/snippets/mega-menu-v2.liquid
+++ b/snippets/mega-menu-v2.liquid
@@ -5,7 +5,7 @@
     <div class="mb-hidden xl:mb-block">
         <div class="">
           <div class="mb-flex mb-gap-[14px] xl:mb-gap-[50px]   mb-flex-wrap mb-justify-center
-          xl:mb-justify-end xl:mb-pr-[50px]
+          xl:mb-justify-center xl:mb-pr-[50px]
           ">
             {% for link in desktop_nav.links %}
               <div data-role="parent-nav">
